--- a/frontEND/package.json
+++ b/frontEND/package.json
@@ -5,10 +5,29 @@
   "dependencies": {
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "@types/googlemaps": "3.30.9",
+    "@types/markerclustererplus": "2.1.33",
+    "ajv": "6.9.1",
+    "antd": "^3.6.6",
+    "bootstrap": "^3.3.7",
+    "chartist": "0.10.1",
+    "chartist-plugin-tooltip": "0.0.11",
+    "classnames": "2.2.6",
+    "jquery": "^3.3.1",
+    "npm-run-all": "4.1.3",
+    "perfect-scrollbar": "1.4.0",
+    "react": "16.4.0",
+    "react-bootstrap": "^0.32.1",
+    "react-chartist": "0.13.1",
+    "react-dom": "16.4.0",
+    "react-google-maps": "9.4.5",
     "react-router-dom": "4.3.1",
-    "react-scripts": "2.1.8"
+    "react-scripts": "1.1.4",
+    "react-swipeable-views": "0.12.13",
+    "react-bootstrap-table": "^4.3.1",
+    "react-quill": "^1.0.0-beta-3",
+    "katex": "^0.9.0",
+    "echarts": "^4.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
