--- a/frontEND/package.json
+++ b/frontEND/package.json
@@ -27,7 +27,8 @@
     "react-bootstrap-table": "^4.3.1",
     "react-quill": "^1.0.0-beta-3",
     "katex": "^0.9.0",
-    "echarts": "^4.1.0"
+    "echarts": "^4.1.0",
+    "prop-types": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -43,5 +44,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "prop-types": "latest"
+  }
 }
