--- a/frontEND/package.json
+++ b/frontEND/package.json
@@ -8,6 +8,7 @@
     "@types/googlemaps": "3.30.9",
     "@types/markerclustererplus": "2.1.33",
     "ajv": "6.9.1",
+    "firebase": "^5.0.2",
     "antd": "^3.6.6",
     "bootstrap": "^3.3.7",
     "chartist": "0.10.1",
